Also utilized image scaling to prevent image overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,7 +58,54 @@
 }
 
 /*=============== BASE ===============*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+input,
+textarea,
+body{
+  color: var(--text-color);
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  font-weight: var(--weight-300);
+}
+
+body {
+  background-color: var(--body-color);
+}
+
+h1,
+h2,
+h3 { 
+  color: var(--title-color);
+  font-weight: var(--weight-700);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  line-height: 1.67em;
+}
+
+img {
+  max-width: 100%;
+}
+
+textarea,
+input { 
+  background-color: none;
+  border: none;
+  outline: none; 
+}
 /*=============== REUSABLE CSS CLASSES ===============*/
 
 /*=============== HEADER & NAV ===============*/
